# nicks_notes

./: mkdocs.yml  pyproject.toml
.github/: release.yml
docs/: index.md  nativePlants.md  sauerkraut.md  sourdough.md
docs/sourdough/: banana_pancake_cookies.md  bread.md  crumpets.md  pizza_crust.md  starter.md
