[tool.poetry]
name = "nicks_notes"
version = "0.1.0"
description = "random notes"
authors = ["nickc1 <nickcortale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
